# heraclis

./: .gitignore  README.md  database.py  hw.py  install_desktop.sh  lab.ipynb  pyproject.toml  workouts.db
src/heraclis/: api.py  database.py  hw.py  models.py
tests/: conftest.py  test_api.py  test_schema.py
