[project]
name = "HeraCLIs"
version = "0.1.0"
description = "Simple rep logger"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "click",
    "sqlalchemy>=2.0.43",
    "fastapi[standard]>=0.117.1",
]

[project.scripts]
hw = "heraclis.hw:cli"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
